# ivg

./: README..md  pyproject.toml
agents/content/: content-video-scriptwriter.md
agents/design/: design-brand-guardian.md  design-image-prompt-engineer.md  design-inclusive-visuals-specialist.md  design-ui-designer.md  design-ux-architect.md  design-ux-researcher.md  design-visual-storyteller.md  design-whimsy-injector.md
agents/engineering/: engineering-frontend-developer.md
agents/master/: master-agent.md
agents/orchestrator/: master-orchestrator.md
agents/video-generation/: master-video-generation.md
config/: agent-registry.yaml
src/backend/api/: routes.py
src/core/config/: ltx2_config.py
src/core/pipelines/: generator.py
src/core/routing/: agent_router.py
src/frontend/: .env.local.example  next.config.js  package.json  tailwind.config.js  vercel.json
src/frontend/components/: GenerationProgress.tsx  ParameterPanel.tsx  PipelineSelector.tsx  PromptEditor.tsx  VideoPlayer.tsx
src/frontend/hooks/: useGeneration.ts
src/frontend/pages/: Dashboard.tsx  _app.tsx  index.tsx
src/frontend/pages/api/: generate.ts
src/frontend/pages/api/jobs/: [jobId].ts
src/frontend/styles/: globals.css
src/frontend/types/: index.ts
src/frontend/utils/: fal.ts
